# shandalar

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: coverage.yml  lnx.yml  win.yml
include/sge/debug/: assert.hpp
include/sge/video/: color.hpp  image_pic.hpp
src/: CMakeLists.txt
src/video/: image_pic.cpp
tests/: CMakeLists.txt  palettes_tests.cpp
tests/data/: duelpal.tr  palall9.tr
